--- a/src/login.html
+++ b/src/login.html
@@ -5,34 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Mediee | Owner Register</title>
+    <title>Mediee | Login</title>
   </head>
   <body>
     <div class="container-fluid">
       <div class="flex-container">
         <div class="split-2"></div>
         <div class="split-1">
-          <form class="form-container">
+          <form class="form-container" style="width: 360px;">
             <div class="form-title-box">
-              <h2 class="form-title">Create Account</h2>
-            </div>
-            <div class="input-container">
-              <input type="name" class="form-input" placeholder="First Name" />
-              <input type="name" class="form-input" placeholder="Last Name" />
-            </div>
-            <div class="input-container">
-              <input
-                type="text"
-                class="form-input"
-                placeholder="Profile Image"
-              />
-            </div>
-            <div class="input-container">
-              <input
-                type="text"
-                class="form-input"
-                placeholder="Resthome Name"
-              />
+              <h2 class="form-title">Login to Mediee</h2>
             </div>
             <div class="input-container">
               <input
@@ -47,16 +29,11 @@
                 class="form-input"
                 placeholder="Enter Password"
               />
-              <input
-                type="password"
-                class="form-input"
-                placeholder="Re-Enter Password"
-              />
             </div>
             <div class="input-container">
               <button type="submit" class="form-button">Submit</button>
             </div>
-            <p class="form-subtitle text-center mt-2">Already have an account? Login <a href="login.html">HERE</a></p>
+            <p class="form-subtitle text-center mt-2">Don't have an account? Register <a href="register.html">HERE</a></p>
           </form>
         </div>
       </div>
