--- a/src/login.html
+++ b/src/login.html
@@ -14,7 +14,7 @@
         <div class="split-1">
           <form class="form-container" style="width: 360px;">
             <div class="form-title-box">
-              <h2 class="form-title">Login to Mediee</h2>
+              <h2 class="form-title">Login Account</h2>
             </div>
             <div class="input-container">
               <input
@@ -31,9 +31,10 @@
               />
             </div>
             <div class="input-container">
-              <button type="submit" class="form-button">Submit</button>
+              <button type="submit" class="form-button" onclick="window.location.href = 'index.html'">Submit</button>
             </div>
             <p class="form-subtitle text-center mt-2">Don't have an account? Register <a href="register.html">HERE</a></p>
+            <p class="form-subtitle text-center mt-2">Go straight to index.html <a href="index.html">HERE</a></p>
           </form>
         </div>
       </div>
