--- a/src/register.html
+++ b/src/register.html
@@ -57,6 +57,7 @@
               <button type="submit" class="form-button">Submit</button>
             </div>
             <p class="form-subtitle text-center mt-2">Already have an account? Login <a href="login.html">HERE</a></p>
+            <p class="form-subtitle text-center mt-2">Go straight to index.html <a href="index.html">HERE</a></p>
           </form>
         </div>
       </div>
