--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,26 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <div class="sidebar">
+      <ul class="items-container">
+        <li class="item"><a href="index.html" class="item-active">Dashboard</a></li>
+        <li class="item"><a href="resident.html">Residents</a></li>
+        <li class="item"><a href="staff.html">Staff</a></li>
+        <li class="item"><a href="history.html">History</a></li>
+        <li class="item logout"><a href="#">Logout</a></li>
+      </ul>
+    </div>
+    <div class="container-minus-sidebar">
+      <div class="title-bar">
+        <h1>Dashboard</h1>
+        <div class="container-flex">
+          <img src="./assets/mount.jpg" class="user-image" />
+          <div class="user-text-box">
+            <p class="user-name">Dayne Game</p>
+            <p class="user-tagline">Care Facility Owner</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
